# birder

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  Pipfile  README.md  compose.yml  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  services-compose.yml  setup.py  webpack.config.js
.github/: file-filters.yml
.github/workflows/: docs.yml  lint.yml  test.yml
docker/: Dockerfile  Dockerfile.base  Dockerfile.flat  Makefile  circus.conf  entrypoint.sh  redis.conf
docker/conf/: circus.ini  nginx.conf  uwsgi.ini
docs/src/: .pages  checks.md  contributing.md  index.md
output/: coverage.xml
src/birder/: __init__.py  admin.py  apps.py  config.py  context_processors.py  db.py  exceptions.py  forms.py  logging.py  models.py  signals.py  tasks.py  types.pyi  utils.py  views.py  widgets.py
src/birder/checks/: __init__.py  amqp.py  base.py  celery.py  db.py  ftp.py  http.py  json.py  ldap.py  memcache.py  mysql.py  passive.py  pg.py  redis.py  redis_value.py  registry.py  s3.py  services.py  smtp.py  ssh.py
src/birder/cli/: __init__.py  _monitor.py  _registry.py
src/birder/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py
src/birder/config/fragments/: constance.py  dramatiq.py  social_auth.py
src/birder/core/: __init__.py  check.py  queue.py  redis.py  registry.py  tsdb.py
src/birder/management/commands/: demo.py  notify.py  upgrade.py
src/birder/migrations/: 0001_initial.py
src/birder/monitor/: cli.py  tsdb.py
src/birder/static/: birder-admin.css  birder-admin.css.map  birder-admin.scss  code.js  index.js
src/birder/static/images/: birder.xcf  celery.xcf  danger.xcf
src/birder/templates/: _fleet.html  index.html  layout.html  login.html  monitor.html
src/birder/templates/admin/birder/monitor/: change_form.html  change_icon.html  configure.html
src/birder/templates/admin/monitor/: configure.html
src/birder/templatetags/: birder.py  icons.py
src/birder/theme/static/css/: styles.css
src/birder/theme/static_src/: package.json  tailwind.config.js
src/birder/theme/static_src/src/: styles.scss
src/birder/utils/: constance.py  dates.py  security.py
src/birder/web/: app.py  auth.py  decorators.py  template_utils.py  views.py
src/birder/web/static/css/: login.css  theme.css
src/birder/web/static/images/: mysql.xcf  ok.xcf
src/birder/web/static/js/: moment-timezone.js
src/birder/web/static/src/: charts.js  common.js
src/birder/web/static/src/css/: charts.css  charts.scss  login.css  login.scss  theme.css  theme.scss
src/birder/web/static/src/js/: chart.js  login.js
src/birder/web/templates/: _base.html  _form.html  _login.html  about.html  api.html  chart.html  chart_old.html  index.html  layout.html  service.html
src/birder/ws/: consumers.py  utils.py
tests/: .coveragerc  conftest.py  test_celery.py  test_celery_app.py  test_cli.py  test_commands.py  test_forms.py  test_http.py  test_login.py  test_monitor.py  test_mysql.py  test_postgres.py  test_registry.py  test_tasks.py  test_views.py  test_ws.py
tests/admin/: test_admin_monitor.py  test_admin_smoke.py
tests/checks/: test_amqp.py  test_celery.py  test_ftp.py  test_http.py  test_json.py  test_ldap.py  test_memcache.py  test_mysql.py  test_parser.py  test_pg.py  test_redis.py  test_registry.py  test_s3.py  test_smtp.py  test_ssh.py  test_tcp.py  test_xml.py
tests/extras/testutils/: factories.py
tests/extras/testutils/factories/: __init__.py  base.py  logcheck.py  monitor.py  project.py  user.py  userrole.py  version.py  workspaces.py
tests/models/: test_model_monitor.py  test_model_userrole.py
tests/templatestags/: test_birder.py  test_icons.py
tests/utils/: test_utils_constance.py
