[project]
name = "birder"
#version = "2.0"
dynamic = ["version"]
description = "HOPE Country Workspace (HCW)"
authors = [
    {name = "sax", email = "s.apostolico@gmail.com"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "attrs>=24.3.0",
    "celery>=5.4.0",
    "colour>=0.1.5",
    "django-admin-extra-buttons>=1.6.0",
    "django-celery-beat>=2.7.0",
    "django-celery-results>=2.5.1",
    "django-constance>=4.1.3",
    "django-csp>=3.8",
    "django-environ>=0.11.2",
    "django-flags>=5.0.13",
    "django-regex>=0.5.0",
    "django-strategy-field>=3.1.0",
    "django-stubs-ext>=5.1.1",
    "django-tailwind>=3.8.0",
    "django-webtest>=1.9.12",
    "django>=5.1.4",
    "djangorestframework>=3.15.2",
    "eventlet>=0.38.2",
    "gunicorn>=23.0.0",
    "pip>=24.3.1",
    "psycopg2>=2.9.10",
    "pymysql>=1.1.1",
    "pyparsing>=3.2.0",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "python-slugify>=8.0.4",
    "pytz>=2024.2",
    "redis-timeseries>=0.1.9",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sentry-sdk>=2.19.2",
    "social-auth-app-django>=5.4.2",
    "werkzeug>=3.1.3",
    "whisper>=1.1.10",
]
[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_version = "3.12"
django_apps = ["birder"]
django_settings_module = "birder.config.settings"
ignore_missing_settings = true
ignore_missing_model_attributes = true

#[project]
#name = ""
#version = "1.0.13"
#description = ""
#packages = [
#    { include = "birder", from = "src" },
#]
#requires-python = ">=3.12"

#
#[tool.poetry.dev-dependencies]
#flake8 = "^3.8.3"
#isort = "^5.5.4"
#pytest = "^6.1.0"
#
#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"
#
#[tool.setuptools]
#py-modules = ['birder']
#
#[tool.setuptools.package-data]
#hello = ['my_data/*']

[project.scripts]
birder = "birder.cli:main"

[tool.uv]
package = true
dev-dependencies = [
    "factory-boy>=3.3.1",
    "mypy>=1.14.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.4",
    "responses>=0.25.3",
]
